deployments/dev/authentication-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authentication-twirp
  labels:
    app: authentication-twirp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-twirp
  template:
    metadata:
      labels:
        app: authentication-twirp
    spec:
      containers:
        - env:
            - name: RPC_CREDENTIALS_HOST
              value: users
            - name: ACCESS_TOKEN_SECRET_KEY
              value: v3ry-s3cr3t-k3y-666
            - name: REFRESH_TOKEN_SECRET_KEY
              value: v3ry-s3cr3t-k3y-999
          image: pepeunlimited/authentication-twirp:0.1.2.9
          name: authentication-twirp
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
