deployments/dev/authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-twirp
spec:
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
  selector:
    app: authentication-twirp
