deployments/dev/authorization-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: authorization-twirp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.dev.pepeunlimited.com
      http:
        paths:
          - backend:
              serviceName: authorization-twirp
              servicePort: 80
            path: /twirp/pepeunlimited.authorization.AuthorizationService/*
